# avionics-software-2025-2026

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy_ota.sh  partitions.csv  sdkconfig  test_send_command.py
components/Adafruit-MAX31855-library/: CMakeLists.txt  WProgram.h
components/Adafruit_ADS1X15/: CMakeLists.txt
components/Adafruit_BusIO/: CMakeLists.txt
components/Adafruit_GPS/: CMakeLists.txt
components/Adafruit_MAX31856/: CMakeLists.txt
components/Adafruit_Sensor/: CMakeLists.txt
components/DHT-sensor-library/: CMakeLists.txt
components/ESP32Servo/: CMakeLists.txt
components/FDC2214/: CMakeLists.txt
components/MPU9255-Arduino-Library/: CMakeLists.txt
components/RadioHead/: CMakeLists.txt
components/RocketsClient/: CMakeLists.txt  idf_component.yml
components/SparkFun_MCP9600_Arduino_Library/: CMakeLists.txt
main/: CMakeLists.txt  avionics.cpp  comms.cpp  dev_dht_imu.cpp  dev_gps.cpp  dev_pi_serial.cpp  dev_radio.cpp  device.cpp  main.c  main.cpp  nodeconfig.cpp  ota.cpp
main/devices/: dev_cap_fill.h  dev_copv_fan.h  dev_dht.h  dev_dht_imu.h  dev_ereg_control.h  dev_flight_computer.h  dev_fs_chamber_injector_transducers.h  dev_fs_injector_transducers.h  dev_fs_lox_gn2_transducers.h  dev_fs_pi_packet_broadcaster.h  dev_fs_relays.h  dev_fs_thermocouples.h  dev_fs_transducers.h  dev_gps.h  dev_ground_radio.h  dev_imu.h  dev_pi_serial.h  dev_radio.h  dev_relay_imon.h  dev_rocket_radio.h  deviceindex.h  nodeconfig.h
main/include/: avionics.h  comms.h  device.h  nodeconfig.h  ota.h  packets.h  utils.h
(+3 files in other folders)
