idf_component_register(SRCS
                        "main.cpp"
                        "avionics.cpp"
                        "nodeconfig.cpp"
                        "dev_radio.cpp"
                        "dev_gps.cpp"
                        "dev_dht_imu.cpp"
                    INCLUDE_DIRS "include")
