idf_component_register(SRCS
                        "avionics.cpp"
                        "comms.cpp"
                        "dev_dht_imu.cpp"
                        "dev_gps.cpp"
                        "dev_pi_serial.cpp"
                        "dev_radio.cpp"
                        "main.cpp"
                        "nodeconfig.cpp"
                    INCLUDE_DIRS "include")
